--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -58,7 +58,6 @@ texture_format/etc=true
 texture_format/etc2=true
 texture_format/no_bptc_fallbacks=true
 codesign/enable=false
-codesign/identity_type=0
 codesign/identity=""
 codesign/password=""
 codesign/timestamp=true
@@ -129,6 +128,38 @@ application/copyright=""
 display/high_res=false
 privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
+codesign/enable=true
+codesign/identity=""
+codesign/timestamp=true
+codesign/hardened_runtime=true
+codesign/replace_existing_signature=true
+codesign/entitlements/custom_file=""
+codesign/entitlements/allow_jit_code_execution=false
+codesign/entitlements/allow_unsigned_executable_memory=false
+codesign/entitlements/allow_dyld_environment_variables=false
+codesign/entitlements/disable_library_validation=false
+codesign/entitlements/audio_input=false
+codesign/entitlements/camera=false
+codesign/entitlements/location=false
+codesign/entitlements/address_book=false
+codesign/entitlements/calendars=false
+codesign/entitlements/photos_library=false
+codesign/entitlements/apple_events=false
+codesign/entitlements/debugging=false
+codesign/entitlements/app_sandbox/enabled=false
+codesign/entitlements/app_sandbox/network_server=false
+codesign/entitlements/app_sandbox/network_client=false
+codesign/entitlements/app_sandbox/device_usb=false
+codesign/entitlements/app_sandbox/device_bluetooth=false
+codesign/entitlements/app_sandbox/files_downloads=0
+codesign/entitlements/app_sandbox/files_pictures=0
+codesign/entitlements/app_sandbox/files_music=0
+codesign/entitlements/app_sandbox/files_movies=0
+codesign/custom_options=PoolStringArray(  )
+notarization/enable=false
+notarization/apple_id_name=""
+notarization/apple_id_password=""
+notarization/apple_team_id=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
@@ -142,7 +173,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Releases/Morock va1.1/iOS/morock.ipa"
+export_path="../../Export/iOS/morock.ipa"
 script_export_mode=1
 script_encryption_key=""
 
@@ -161,7 +192,7 @@ application/code_sign_identity_release=""
 application/export_method_release=0
 application/targeted_device_family=2
 application/name="Morock"
-application/info="..."
+application/info="Morock The Game"
 application/identifier="com.mcg.morock"
 application/signature=""
 application/short_version="1.0"
